fix horizontal scroll on edit product page

--- a/src/app/dashboard/side-nav-minimized/side-nav-minimized.component.css
+++ b/src/app/dashboard/side-nav-minimized/side-nav-minimized.component.css
@@ -25,7 +25,7 @@
   overflow-y: hidden !important;
   min-width: 80px;
   max-width: 80px;
-  min-height: 50vh;
+  min-height: 90vh;
   height: auto;
   background: var(--light-black-color);
   color: #fff;
