--- a/src/app/dashboard/side-nav/side-nav.component.css
+++ b/src/app/dashboard/side-nav/side-nav.component.css
@@ -8,7 +8,7 @@
   z-index: 5;
   min-width: 250px;
   max-width: 250px;
-  min-height: 50vh;
+  min-height: 90vh;
   height: auto;
   background: var(--light-black-color);
   color: #fff;
